# mdo-utils

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
cmake/: create_test.cmake  mdo-config.cmake.in  mondradiko_create_test.cmake  mondradiko_install.cmake  mondradiko_setup_library.cmake
docs/design/: repo-layout.md
include/: allocator.h  export.h  log.h  result.h
include/mondradiko/: allocator.h  export.h  log.h  result.h
src/: allocator.c  log.c  result.c
tests/: CMakeLists.txt  test-allocator.c  test-log.c  test-result.c  test_common.h
